# Bouquet

./: .env.example  .gitignore  ACCURACY_IMPROVEMENTS_COMPLETE.md  ADVANCED_FEATURES.md  ADVANCED_RAG_FEATURES.md  BUGFIX_SUMMARY.md  CHECKLIST.md  COMPLEX_REASONING_COMPLETE.md  COMPLEX_REASONING_QUICKSTART.md  DEBUGGING_ENHANCEMENTS.md  Dockerfile  FEATURES.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_ULTRA.md  IMPLEMENTATION_FIXES.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_NOTES.md  LICENSE  LOCAL_DEV_GUIDE.md  MAKEFILE_GUIDE.md  MEMORY_SAFETY_IMPROVEMENTS.md  Makefile  PERFORMANCE_OPTIMIZATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICKSTART_ULTRA.md  README.md  SEMANTIC_RELATIONSHIPS.md  SMART_QUERY_GUIDE.md  SYSTEM_FLOW.md  TESTING_GUIDE.md  ULTRA_ADVANCED_FEATURES.md  WEB_INTERFACE_GUIDE.md  docker-compose.yml  pyproject.toml  setup.bat  setup.sh  test_complex_reasoning.py  test_e2e.py  (+3 more)
app/: main.py
app/api/: __init__.py  documents.py  graph.py  query.py
app/core/: __init__.py  config.py  dependencies.py  logging.py
app/domain/: __init__.py  graph.py  models.py  query.py
app/repositories/: __init__.py  neo4j_repository.py
app/services/: __init__.py  (+33 more)
data/: feedback.json  sample_ai_document.txt
docs/: API_EXAMPLES.md  ARCHITECTURE.md  DEPLOYMENT.md  DIAGRAMS.md  MEMORY_SAFETY_GUIDE.md
scripts/: example_usage.py  init_db.py
static/: app.js  index.html
tests/: __init__.py  conftest.py  test_accuracy_improvements.py  test_document_processor.py  test_embedding_service.py  test_new_features.py  validate_accuracy.py
(+1 files in other folders)
